# esp32-ocr-ai-server

./: LICENSE  README.md  ocr_output.txt  server.py
ESP32_ocr/: TODO.txt  platformio.ini
ESP32_ocr/include/: camera.h  oled_display.h
ESP32_ocr/src/: camera.cpp  main.cpp
Server/: .gitignore  CMakeLists.txt  README.md
Server/scripts/: download-libhttpserver.sh  python_server.sh
Server/src/: main.c
myenv/: pyvenv.cfg
scripts/: run.sh
